v3.0 整体架构升级